--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link href="https://vjs.zencdn.net/8.10.0/video-js.css" rel="stylesheet">
 
   <!-- Custom Styles -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v=2.0">
 </head>
 
 <body>
@@ -29,6 +29,14 @@
         <div class="protocol-selector">
           <button class="protocol-btn active" data-protocol="hls">HLS</button>
           <button class="protocol-btn" data-protocol="dash">DASH</button>
+        </div>
+
+        <!-- Layout Selector -->
+        <div class="layout-selector">
+          <button class="layout-btn active" data-layout="4x4">4×4</button>
+          <button class="layout-btn" data-layout="3x3">3×3</button>
+          <button class="layout-btn" data-layout="2x2">2×2</button>
+          <button class="layout-btn" data-layout="1x1">1×1</button>
         </div>
 
         <!-- Control Buttons -->
